Some FindBugs cleanups.